# Voxel

./: .gitignore  CMakeLists.txt  README.md  Voxel.rc  Voxel.sln  premake5.lua
.github/workflows/: cmake-multi-platform.yml
Voxel/: .gitignore  Voxel.rc  resource.h
Voxel/assets/shaders/: basic_fragment_shader.shader  basic_vertex_shader.shader  widgets_fragment.shader
Voxel/include/stm/: avx_math.h  dynamic_matrix.h  dynamic_matrix.ipp  dynamic_vector.h  dynamic_vector.ipp  math.h  matrix.h  matrix.ipp  matrix2x2.h  simplex_noise.h  simplex_noise.ipp  vector.h  vector.ipp  vector2.h  vector3.h  vector4.h
Voxel/src/: main.cpp
Voxel/src/Application/: Application.cpp  Application.h
Voxel/src/Entity/: Entity.h
Voxel/src/EventSystem/: Event.h  KeyCodes.h  KeyEvent.h
Voxel/src/Game/: Block.h  Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  InterfaceLayer.cpp  Player.cpp  Player.h  Voxel.cpp  Voxel.h  VoxelRenderer.cpp  VoxelRenderer.h  World.cpp  World.h
Voxel/src/Renderer/: CoreWindow.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Vertex.cpp  Vertex.h
Voxel/src/Renderer/OpenGL/: OpenGLCallback.cpp  OpenGLCallback.h  OpenGLCore.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPlatform.h  OpenGLRender.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLWindow.cpp  OpenGLWindow.h
Voxel/src/Utilities/: FileSystem.h  Logging.h
Voxel/src/Widgets/: Widget.cpp
assets/shaders/: basic_vertex_shader.shader  widgets_vertex.shader
include/: CMakeLists.txt
include/stm/: distribution.h  function.h  matrix_transform.h  simplex_noise.ipp
src/: CMakeLists.txt  main.cpp
src/Application/: Application.h
src/EventSystem/: Event.h  MouseEvent.h  WindowEvent.h
src/Game/: Chunk.cpp  Cube.h  GameLayer.cpp  GameLayer.h  InterfaceLayer.h  Player.h  Voxel.cpp  Voxel.h
src/Platform/: Platform.h
src/Renderer/: Layer.cpp  Layer.h  Mesh.cpp  Mesh.h  Renderer.h  RendererCore.h  Vertex.h
src/Renderer/OpenGL/: OpenGLCore.h  OpenGLPlatform.h  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexBuffer.h  OpenGLWindow.cpp  OpenGLWindow.h
src/Utilities/: FileSystem.cpp  Logging.cpp
src/Widgets/: Widget.cpp  Widget.h
